Pushing the whole thing baby

--- a/Views/Home/Confirmation.cshtml
+++ b/Views/Home/Confirmation.cshtml
@@ -4,4 +4,8 @@
 @{
 }
 
-Success, click <a href="ViewMovies">here</a> to see the movies.
+@*I'm going to keep this page, just because people like to know that their input worked and was successful*@
+
+<h1>Success</h1> 
+<br />
+<h4>Click <a href="ViewMovies">here</a> to see the movies.</h4>
