--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">This is Joel's Movie App</h1>
+    <h1 >This is Joel's Movie App</h1>
     <p>Because I have an awesome collection, I need an awesome app.</p>
 </div>
 <div class="text-center">
